# AVL_stripped

./: .gitignore  CMakeLists.txt  Compiling_AVL_using_MinGW.txt  README.md  README_CMAKE.md  build.sh
eispack/: CMakeLists.txt  Makefile
mrf/: CMakeLists.txt
src/: AVL.INC  CMakeLists.txt  amake.f  amode.f  aoper.f  atime.f  avl.f  limits.f  stubs.f
